Fixed error on Safari browsers not allowing animations on pseudo elements content property. Am just running a JS loop to change the inner HTML periodically with no fade in and out text animation like done with CSS.

--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,14 @@ h2 {
 .hero__heading--lower::before {
 	content: "";
 	display: block;
-	-webkit-animation: headingChange 12s linear 0.5s infinite;
+
+	/* -webkit-animation: headingChange 12s linear 0.5s infinite; */
+	-webkit-animation-name: headingChange;
+	-webkit-animation-duration: 12s;
+	-webkit-animation-timing-function: linear;
+	-webkit-animation-delay: 0.5s;
+	-webkit-animation-iteration-count: infinite;
+
 	animation: headingChange 12s linear 0.5s infinite;
 }
 
